# gridlock

./: Cargo.toml  LICENSE  README.md  flake.nix
crates/gridlock/: Cargo.toml
crates/gridlock-bin/: Cargo.toml
crates/gridlock-bin/src/: main.rs
crates/gridlock/src/: lib.rs
crates/gridlock/src/testdata/: lockfile.json
crates/nyarr/: Cargo.toml
crates/nyarr-bin/: Cargo.toml
crates/nyarr-bin/src/: main.rs
crates/nyarr/src/: hash.rs  lib.rs  tar.rs
crates/nyarr/src/testdata/: test1.nar  test1.tar  test2.nar  test2.tar
crates/nyarr/test2/: exe
