[package]
name = "gridlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
chrono = "0.4.23"
color-eyre = "0.6.2"
nyarr = { version = "0.1.0", path = "../nyarr" }
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["process"] }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt"] }
